--- a/technology.html
+++ b/technology.html
@@ -67,21 +67,21 @@
             <div class="servicess__categories">
               <div class="servicess__categories__box category--activated" data-target="#first">
                 <h4 class="servicess__categories__label">
-                  Security Strategy
+                  IT Strategy
                 </h4>
 
                 <div class="servicess__categories__label__arrow"></div>
               </div>
               <div class="servicess__categories__box" data-target="#second">
                 <h4 class="servicess__categories__label">
-                  Governance, Risk & Compliance
+                  IT Architecture & Engineering
                 </h4>
 
                 <div class="servicess__categories__label__arrow"></div>
               </div>
               <div class="servicess__categories__box" data-target="#third">
                 <h4 class="servicess__categories__label">
-                  Security Architecture & Engineering
+                  Managed IT Services
                 </h4>
 
                 <div class="servicess__categories__label__arrow"></div>
@@ -89,20 +89,12 @@
 
               <div class="servicess__categories__box" data-target="#fourth">
                 <h4 class="servicess__categories__label">
-                  Cloud Computing Security
+                  Technology Delivery
                 </h4>
 
                 <div class="servicess__categories__label__arrow"></div>
               </div>
 
-
-              <div class="servicess__categories__box" data-target="#fifth">
-                <h4 class="servicess__categories__label">
-                  Security Testing & Evaluation
-                </h4>
-
-                <div class="servicess__categories__label__arrow"></div>
-              </div>
 
               
             </div>
@@ -120,14 +112,16 @@
 
           <section class="categories">
             <div id="first" class="grid active--grid">
+              <h3 class="categories__grid_title">We help your organisation achieve strategic goals by developing an IT strategy that aligns to your business objectives</h3>
               <div class="categories__grid">
                 <div class="categories__grid__card active" data-animation="news">
                   <h5 class="categories__grid__header">
-                    Security Advisory
+                    IT Advisory
+
                   </h5>
 
                   <p class="categories__grid__label">
-                    We provide expertise and guidance to build and embed cyber security solutions and manage risk based on best practice.
+                    We guide and support your organisation build and embed fit for purpose technology solutions and automated practices
 
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
@@ -135,34 +129,12 @@
 
                 <div class="categories__grid__card" data-animation="news">
                   <h5 class="categories__grid__header">
-                    CISO / ITSA as a Service
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We provide CISOs and ITSAs that interpret and translate complex information security issues and effectively manage risk
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    Security Officer Support Service
+                    IT Assessment & Analysis
 
                   </h5>
 
                   <p class="categories__grid__label">
-                    We provide guidance and support with your Defence Industry Security Program (DISP) membership application
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    Security Analysis & Review 
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We provide comprehensive review and assessment of your current infrastructure and plan and develop options for future information security solutions
+                    We are skilled at translating business requirements into technology solutions that best fit and integrate with your organisations enterprise architecture
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
@@ -171,79 +143,55 @@
             </div>
 
             <div id="second" class="grid">
+              <h3 class="categories__grid_title">We support your organisation to deliver programme and project outcomes by designing, testing and implementing technology solutions through proven enterprise architecture frameworks and draw on our real-world experience to enable organisations to define how they should be designed and transformed</h3>
               <div class="categories__grid">
                 <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Security Risk Management
+                  <h5 class="categories__grid__header">IT Architecture & Design
+
                   </h5>
 
                   <p class="categories__grid__label">
-                    We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to enable informed decision making
+                    We provide end to end architecture advice and design services to support the implementation and maintenance of your technology solutions
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
                   <h5 class="categories__grid__header">
-                    Governance
+                    IT Solution Integration
+
                   </h5>
 
                   <p class="categories__grid__label">
-                    We develop enterprise governance frameworks, policies and processes based on industry best practice
+                    We will support your organisation to implement new technologies and solutions and ensure they integrate with existing systems
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
                   <h5 class="categories__grid__header">
-                    Compliance & Audit
-
+                    Technology Development, Testing & Integration
                   </h5>
 
                   <p class="categories__grid__label">
-                    We conduct security audits on your information systems and provide audit advisory services
+                    We support the delivery of your technology solutions by developing, testing and deploying solutions aligned to industry best practice
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
 
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    IRAP
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you prepare for security certifications or conduct IRAP Assessments on your information systems
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
 
               </div>
             </div>
 
             <div id="third" class="grid">
+              <h3 class="categories__grid_title">We help your organisation manage and maintain IT demands and system functionality across a number of Managed Services for different ICT areas and technologies</h3>
               <div class="categories__grid">
                 <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Security Architecture Design & Build</h5>
+                  <h5 class="categories__grid__header">Service Integration & Management
+                  </h5>
 
                   <p class="categories__grid__label">
-                    We provide end to end security architecture advice, design and build service to support the implementation and maintenance of your security systems
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Security Solution Integration</h5>
-
-                  <p class="categories__grid__label">
-                    We implement security technologies and solutions and integrate them with existing architecture
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Gateway & Network Security</h5>
-
-                  <p class="categories__grid__label">
-                    We help you protect your organisation from unauthorised access or modification by adopting the most appropriate policies and practices to ensure you stay in control of your organisations’ data without exceptions
+                    We provide a comprehensive range of ITIL based services to support your organisation
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
@@ -252,12 +200,38 @@
             </div>
 
             <div id="fourth" class="grid">
+              <h3 class="categories__grid_title">We support your organisation design, implement and maintain hardware, software and cloud technologies through our technology partners and our expertise</h3>
               <div class="categories__grid">
                 <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Cloud Security</h5>
+                  <h5 class="categories__grid__header">Hardware Technology
+                  </h5>
 
                   <p class="categories__grid__label">
-                    We provide personalised Cloud architecture to improve collaboration and productivity within your business
+                    We design, integrate and install hardware to support your organisation needs
+                  </p>
+                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                </div>
+
+
+                <div class="categories__grid__card" data-animation="news">
+                  <h5 class="categories__grid__header">Software Technology
+
+                  </h5>
+
+                  <p class="categories__grid__label">
+                    We develop, implement and customise commercial of the shelf solutions through our technology partners and our expertise creating value for your organisation
+                  </p>
+                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                </div>
+
+
+                <div class="categories__grid__card" data-animation="news">
+                  <h5 class="categories__grid__header">Cloud Technology
+
+                  </h5>
+
+                  <p class="categories__grid__label">
+                    We design, develop and maintain cloud solutions that transform your organisation
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
@@ -265,41 +239,6 @@
               </div>
             </div>
 
-            <div id="fifth" class="grid">
-              <div class="categories__grid">
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Penetration Testing</h5>
-
-                  <p class="categories__grid__label">
-                    We help you scope, plan and execute penetration tests
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    Vulnerability Assessment
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We assess your architecture, systems and networks for vulnerabilities that may be a threat to your organisation
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    Red, Blue & Purple Team Testing
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We test your digital, physical and workforce environments with a simulated cyber-intrusion using real-world attack methods
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-              </div>
-            </div>
           </section>
 
 
