--- a/project_delivery.html
+++ b/project_delivery.html
@@ -67,38 +67,14 @@
             <div class="servicess__categories">
               <div class="servicess__categories__box category--activated" data-target="#first">
                 <h4 class="servicess__categories__label">
-                  Security Strategy
+                  Business Strategy & Improvement
                 </h4>
 
                 <div class="servicess__categories__label__arrow"></div>
               </div>
               <div class="servicess__categories__box" data-target="#second">
                 <h4 class="servicess__categories__label">
-                  Governance, Risk & Compliance
-                </h4>
-
-                <div class="servicess__categories__label__arrow"></div>
-              </div>
-              <div class="servicess__categories__box" data-target="#third">
-                <h4 class="servicess__categories__label">
-                  Security Architecture & Engineering
-                </h4>
-
-                <div class="servicess__categories__label__arrow"></div>
-              </div>
-
-              <div class="servicess__categories__box" data-target="#fourth">
-                <h4 class="servicess__categories__label">
-                  Cloud Computing Security
-                </h4>
-
-                <div class="servicess__categories__label__arrow"></div>
-              </div>
-
-
-              <div class="servicess__categories__box" data-target="#fifth">
-                <h4 class="servicess__categories__label">
-                  Security Testing & Evaluation
+                  Programme and Project Delivery
                 </h4>
 
                 <div class="servicess__categories__label__arrow"></div>
@@ -120,49 +96,38 @@
 
           <section class="categories">
             <div id="first" class="grid active--grid">
+              <h3 class="categories__grid_title">We provide a and to end portfolio, programme and project delivery service where we can manage all aspects of project delivery throughout the entire project lifecycle</h3>
               <div class="categories__grid">
                 <div class="categories__grid__card active" data-animation="news">
                   <h5 class="categories__grid__header">
-                    Security Advisory
+                    Business Case Development
+
                   </h5>
 
                   <p class="categories__grid__label">
-                    We provide expertise and guidance to build and embed cyber security solutions and manage risk based on best practice.
-
+                    We develop business cases aligned to strategic objectives with clearly defined scope and objectives aimed to senior executive decision makers
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
                   <h5 class="categories__grid__header">
-                    CISO / ITSA as a Service
+                    Requirement Development
                   </h5>
 
                   <p class="categories__grid__label">
-                    We provide CISOs and ITSAs that interpret and translate complex information security issues and effectively manage risk
+                    We develop detailed and fit for purpose business and technical requirements for your organisations’ programmes and projects
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
                   <h5 class="categories__grid__header">
-                    Security Officer Support Service
-
+                    Business Strategy
                   </h5>
 
                   <p class="categories__grid__label">
-                    We provide guidance and support with your Defence Industry Security Program (DISP) membership application
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    Security Analysis & Review 
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We provide comprehensive review and assessment of your current infrastructure and plan and develop options for future information security solutions
+                    We provide advice, conduct assessments and deliver solutions that equip you to realise sustained business value and improvement
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
@@ -171,146 +136,82 @@
             </div>
 
             <div id="second" class="grid">
+              <h3 class="categories__grid_title">We provide a and to end portfolio, programme and project delivery service where we can manage all aspects of project delivery throughout the entire project lifecycle</h3>
               <div class="categories__grid">
                 <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Security Risk Management
+                  <h5 class="categories__grid__header">Project Assurance
+
                   </h5>
 
                   <p class="categories__grid__label">
-                    We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to enable informed decision making
+                    We provide independent project and programme assessments, advice and recommendations based on industry best practice and methodologies
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
                   <h5 class="categories__grid__header">
-                    Governance
+                    Portfolio, Programme & Project Management
                   </h5>
 
                   <p class="categories__grid__label">
-                    We develop enterprise governance frameworks, policies and processes based on industry best practice
+                    We deliver and manage your programmes and projects ensuring they meet scope, schedule and budget
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
                   <h5 class="categories__grid__header">
-                    Compliance & Audit
-
+                    Portfolio, Programme & Project Management Office Services
                   </h5>
 
                   <p class="categories__grid__label">
-                    We conduct security audits on your information systems and provide audit advisory services
+                    We provide PMO services that helps your organisation define and maintain standards for your projects and programmes
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
                   <h5 class="categories__grid__header">
-                    IRAP
+                    Commercial & Procurement
+
                   </h5>
 
                   <p class="categories__grid__label">
-                    We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you prepare for security certifications or conduct IRAP Assessments on your information systems
+                    We plan, design and deliver government procurements and manage your commercials
                   </p>
                   <a class="categories__grid__button" href="./service.html">Learn More</a>
                 </div>
+
+
+
+                <div class="categories__grid__card" data-animation="news">
+                  <h5 class="categories__grid__header">
+                    Benefits Management
+                  </h5>
+
+                  <p class="categories__grid__label">
+                    We help you realise your benefits through our experience in all aspects of benefits management
+                  </p>
+                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                </div>
+
+                <div class="categories__grid__card" data-animation="news">
+                  <h5 class="categories__grid__header">
+                    Change Management
+                  </h5>
+
+                  <p class="categories__grid__label">
+                    We provide change managers with strong experience leading seamless organisational, cultural and technological-enabled change ensuring your transformation succeeds
+                  </p>
+                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                </div>
+
+
 
               </div>
             </div>
 
-            <div id="third" class="grid">
-              <div class="categories__grid">
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Security Architecture Design & Build
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We provide end to end security architecture advice, design and build service to support the implementation and maintenance of your security systems
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    Security Solution Integration
-
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We implement security technologies and solutions and integrate them with existing architecture
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    Gateway & Network Security
-
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We help you protect your organisation from unauthorised access or modification by adopting the most appropriate policies and practices to ensure you stay in control of your organisations’ data without exceptions
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-              </div>
-            </div>
-
-            <div id="fourth" class="grid">
-              <div class="categories__grid">
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Cloud Security
-
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We provide personalised Cloud architecture to improve collaboration and productivity within your business
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-              </div>
-            </div>
-
-            <div id="fifth" class="grid">
-              <div class="categories__grid">
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">Penetration Testing
-
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We help you scope, plan and execute penetration tests
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    Vulnerability Assessment
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We assess your architecture, systems and networks for vulnerabilities that may be a threat to your organisation
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-                <div class="categories__grid__card" data-animation="news">
-                  <h5 class="categories__grid__header">
-                    Red, Blue & Purple Team Testing
-                  </h5>
-
-                  <p class="categories__grid__label">
-                    We test your digital, physical and workforce environments with a simulated cyber-intrusion using real-world attack methods
-                  </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
-                </div>
-
-              </div>
-            </div>
           </section>
 
 
