--- a/service.html
+++ b/service.html
@@ -39,10 +39,24 @@
 
             <div class="navigation__links">
               <a href="./aboutus.html" class="navigation__link">About Us</a>
+              <div>
+                <a href="javascript:void(0);" class="navigation__link">Services <i class="fa-solid fa-angle-down"></i></a>
+                <ul>
+                  <li>
+                    <a href="./cyber_security.html" class="navigation__link">Cyber security</a>
+                  </li>
+                  <li>
+                    <a href="./technology.html" class="navigation__link">Technology and architecture</a>
+                  </li>
+                  <li>
+                    <a href="./project_delivery.html" class="navigation__link">Project Delivery</a>
+                  </li>
+                </ul>
+              </div>
               <a href="./careers.html" class="navigation__link">Careers</a>
-              <a href="./contactus.html" class="navigation__link">Contact Us</a>
               <a href="./news.html" class="navigation__link">News</a>
-              <a href="./services.html" class="navigation__link">Services</a>
+              <a href="./contactus.html" class="navigation__link">Contact Us</a>
+              <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
             </div>
         </nav>
 
