--- a/service.html
+++ b/service.html
@@ -94,6 +94,117 @@
             </div>
           </section>
 
+
+          
+          <!-- slider -->
+          <section class="background">
+
+            <h3 class="background__title" data-animation="paragraph">
+              Five Eyes News
+            </h3>
+
+            <div class="owl-carousel owl-theme" id="news_slider">
+              <!-- 1 -->
+              <div class="item">
+                <a href="./blog-post.html" class="news__grid__item">
+                  <figure class="news__grid__item__media">
+                    <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                      crossorigin="anonymous" />
+                  </figure>
+
+                  <h3 class="news__grid__item__title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    adipiscing dolor.
+                  </h3>
+
+                  <p class="news__grid__item__label" data-animation="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, adipiscing ipsum dolor sit
+                    amet.
+                  </p>
+
+                </a>
+              </div>
+              <!-- 2 -->
+              <div class="item">
+                <a href="./blog-post.html" class="news__grid__item">
+                  <figure class="news__grid__item__media">
+                    <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                      crossorigin="anonymous" />
+                  </figure>
+
+                  <h3 class="news__grid__item__title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    adipiscing dolor.
+                  </h3>
+
+                  <p class="news__grid__item__label" data-animation="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, adipiscing ipsum dolor sit
+                    amet.
+                  </p>
+
+
+                </a>
+              </div>
+              <!-- 3 -->
+              <div class="item">
+                <a href="./blog-post.html" class="news__grid__item">
+                  <figure class="news__grid__item__media">
+                    <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                      crossorigin="anonymous" />
+                  </figure>
+
+                  <h3 class="news__grid__item__title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    adipiscing dolor.
+                  </h3>
+
+                  <p class="news__grid__item__label" data-animation="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, adipiscing ipsum dolor sit
+                    amet.
+                  </p>
+
+
+                </a>
+              </div>
+
+              <!-- 4 -->
+              <div class="item">
+                <a href="./blog-post.html" class="news__grid__item">
+                  <figure class="news__grid__item__media">
+                    <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                      crossorigin="anonymous" />
+                  </figure>
+
+                  <h3 class="news__grid__item__title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    adipiscing dolor.
+                  </h3>
+
+                  <p class="news__grid__item__label" data-animation="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, adipiscing ipsum dolor sit
+                    amet.
+                  </p>
+
+
+                </a>
+              </div>
+
+            </div>
+
+            <p style="text-align: right;">
+              <a href="./news.html">View all News</a>
+            </p>
+
+          </section>
+
           <footer class="footer">
             <div class="footer__information">
               <div class="footer__location">
@@ -136,22 +247,14 @@
 
                 <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
                   data-animation="paragraph">contact@fiveeyes.com.au</a>
+
+                <br><br>
+                <a href="./">
+                  <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" />
+                </a>
+
               </div>
 
-              <div class="footer__partners">
-                <p class="footer__title" data-animation="paragraph">
-                  Partners
-                </p>
-
-                <div class="footer__images__grid">
-                  <img class="footer__images__grid__image" src="./assets/cisco.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/microsoft.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/amazon.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                </div>
-              </div>
 
             </div>
           </footer>
@@ -160,6 +263,12 @@
     </div>
   </div>
   <script src="./app/index.js" type="module"></script>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script src="./app/script.js"></script>
 </body>
 
 </html>
