--- a/cyber_security.html
+++ b/cyber_security.html
@@ -147,7 +147,7 @@
                     We provide expertise and guidance to build and embed cyber security solutions and manage risk based on best practice.
 
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="sevices/security-advisory.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
