--- a/services.html
+++ b/services.html
@@ -477,54 +477,12 @@
     </div>
   </div>
   <script src="./app/index.js" type="module"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script>
-    $(function () {
-      // Owl Carousel
-      var owl = $("#news_slider");
-      owl.owlCarousel({
-        items: 3,
-        margin: 40,
-        loop: true,
-        nav: false,
-        responsiveClass: true,
-        responsive: {
-          0: {
-            items: 1,
-            margin: 20
-          },
-
-          600: {
-            items: 2,
-            margin: 20
-          },
-
-          1024: {
-            items: 3
-          },
-
-          1366: {
-            items: 3
-          }
-        }
-      });
-    });
-
-  </script>
-  <script>
-    $(".servicess__categories__box").click(function(){
-      $(this).siblings().removeClass("category--activated");
-      $(this).addClass("category--activated")
-      var target = $(this).data('target');
-      $(target).siblings().removeClass("active--grid")
-      $(target).addClass("active--grid")
-    })
-  </script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script src="./app/script.js"></script>
+  
 </body>
 
 </html>
