--- a/cyber_security.html
+++ b/cyber_security.html
@@ -158,7 +158,7 @@
                   <p class="categories__grid__label">
                     We provide CISOs and ITSAs that interpret and translate complex information security issues and effectively manage risk
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="sevices/ciso.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
