--- a/index.html
+++ b/index.html
@@ -512,6 +512,8 @@
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="./app/script.js"></script>
 
+
+  <!-- hidden update -->
 </body>
 
 </html>
