--- a/sevices/compliance-audit.html
+++ b/sevices/compliance-audit.html
@@ -63,21 +63,21 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Advisory
+              Security Officer Support Service
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Advisory?
+                What is Security Officer Support Service?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                The DISP supports Australian businesses to understand and meet their security obligations when engaging in Defence projects, contracts and tenders. Our Security Officer services provides you with experienced security professionals to guide you through your application process or assist with and DISP needs.
+
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Advisory?
+                Why Five Eyes Security Officer Support Service?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
