--- a/sevices/compliance-audit.html
+++ b/sevices/compliance-audit.html
@@ -63,29 +63,29 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Officer Support Service
+              Compliance & Audit
+
 
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Officer Support Service?
+                What is Compliance & Audit?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                The DISP supports Australian businesses to understand and meet their security obligations when engaging in Defence projects, contracts and tenders. Our Security Officer services provides you with experienced security professionals to guide you through your application process or assist with and DISP needs.
-
+                Our Compliance and Audit services provides you with a comprehensive assessment of your organisations’
+                information systems measuring its security against industry best practices
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Officer Support Service?
+                Why Five Eyes Compliance & Audit?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting has well versed and experienced specialists that can help your organisation achieve
+                and maintain your security compliance. Five Eyes Consulting can conduct audits including ISO:27001,
+                NIST, PSPF, ISM and more.
+
               </p>
             </div>
 
@@ -99,7 +99,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to enable informed decision making
+                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
+                  enable informed decision making
                 </p>
                 <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
               </div>
@@ -133,7 +134,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you prepare for security certifications or conduct IRAP Assessments on your information systems
+                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
+                  prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
                 <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
               </div>
@@ -147,7 +149,7 @@
 
           </section>
 
-          
+
 
 
 
