--- a/sevices/governance.html
+++ b/sevices/governance.html
@@ -63,29 +63,31 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Advisory
+              Governance
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Advisory?
+                What is Governance?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Our Governance service helps you control and direct your organisation’s approach to security setting the
+                basis of how your organisation coordinates your security activities.
+
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Advisory?
+                Why Five Eyes Governance?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting has worked with several organisations improving the way the manage their security
+                by developing enterprise governance frameworks, policies and processes based on industry best practice,
+                your security posture and desired end state. We have extensive experience across GRC services across
+                Australia and the capability to embed ourselves within your teams for knowledge transfer and improved
+                collaboration.
+
               </p>
             </div>
 
@@ -99,7 +101,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to enable informed decision making
+                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
+                  enable informed decision making
                 </p>
                 <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
               </div>
@@ -133,7 +136,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you prepare for security certifications or conduct IRAP Assessments on your information systems
+                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
+                  prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
                 <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
               </div>
@@ -147,7 +151,7 @@
 
           </section>
 
-          
+
 
 
 
