--- a/sevices/irap.html
+++ b/sevices/irap.html
@@ -63,29 +63,30 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Advisory
+              IRAP 
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Advisory?
+                What is IRAP?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                IRAP is an Australian Signals Directorate (ASD) initiative to provide high quality ICT security
+                assessment services to government. IRAP is an assessment conducted through two stages that helps you
+                identify security deficiencies and assesses security compliance of your systems.
+
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Advisory?
+                Why Five Eyes IRAP?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Our accredited IRAP Assessors are experts in security and have worked with various government
+                organisations certifying information system. Our experts can support you to prepare and gain security
+                certifications through our IRAP advice and Pre-IRAP and IRAP assessments.
+                We also perform gap analysis and IRAP readiness assessments.
               </p>
             </div>
 
@@ -99,7 +100,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to enable informed decision making
+                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
+                  enable informed decision making
                 </p>
                 <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
               </div>
@@ -133,7 +135,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you prepare for security certifications or conduct IRAP Assessments on your information systems
+                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
+                  prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
                 <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
               </div>
@@ -147,7 +150,7 @@
 
           </section>
 
-          
+
 
 
 
