--- a/cyber_security.html
+++ b/cyber_security.html
@@ -170,7 +170,7 @@
                   <p class="categories__grid__label">
                     We provide guidance and support with your Defence Industry Security Program (DISP) membership application
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/security-officer.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -181,7 +181,7 @@
                   <p class="categories__grid__label">
                     We provide comprehensive review and assessment of your current infrastructure and plan and develop options for future information security solutions
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/security-analysis-review.html">Learn More</a>
                 </div>
 
               </div>
@@ -197,7 +197,7 @@
                   <p class="categories__grid__label">
                     We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to enable informed decision making
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/security-risk.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -208,7 +208,7 @@
                   <p class="categories__grid__label">
                     We develop enterprise governance frameworks, policies and processes based on industry best practice
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/governance.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -220,7 +220,7 @@
                   <p class="categories__grid__label">
                     We conduct security audits on your information systems and provide audit advisory services
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/compliance-audit.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -231,7 +231,7 @@
                   <p class="categories__grid__label">
                     We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you prepare for security certifications or conduct IRAP Assessments on your information systems
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/irap.html">Learn More</a>
                 </div>
 
               </div>
@@ -247,7 +247,7 @@
                   <p class="categories__grid__label">
                     We provide end to end security architecture advice, design and build service to support the implementation and maintenance of your security systems
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/security-architecture-design.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -259,7 +259,7 @@
                   <p class="categories__grid__label">
                     We implement security technologies and solutions and integrate them with existing architecture
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/security-solution-integration.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -271,7 +271,7 @@
                   <p class="categories__grid__label">
                     We help you protect your organisation from unauthorised access or modification by adopting the most appropriate policies and practices to ensure you stay in control of your organisations’ data without exceptions
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/gateway-network-security.html">Learn More</a>
                 </div>
 
               </div>
@@ -288,7 +288,7 @@
                   <p class="categories__grid__label">
                     We provide personalised Cloud architecture to improve collaboration and productivity within your business
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/cloud-security.html">Learn More</a>
                 </div>
 
               </div>
@@ -305,7 +305,7 @@
                   <p class="categories__grid__label">
                     We help you scope, plan and execute penetration tests
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/penetration-testing.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
