--- a/sevices/security-analysis-review.html
+++ b/sevices/security-analysis-review.html
@@ -68,24 +68,21 @@
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Advisory?
+                What is Security Analysis & Review (change from discovery and assessment)?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Security analysis and review services helps your organisation identify and resolve security related
+                issues in your current infrastructure and systems through in depth analysis and review.
+
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Advisory?
+                Why Five Eyes Security Analysis & Review (change from discovery and assessment)?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                Five Eyes Consulting conducts comprehensively review and assessment of your infrastructure and plan and
+                develop options paper for future networks, security, cloud, collaboration and mobility capabilities
               </p>
             </div>
 
@@ -99,7 +96,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to enable informed decision making
+                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
+                  enable informed decision making
                 </p>
                 <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
               </div>
@@ -133,7 +131,8 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you prepare for security certifications or conduct IRAP Assessments on your information systems
+                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
+                  prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
                 <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
               </div>
@@ -142,7 +141,7 @@
 
           </section>
 
-          
+
 
 
 
