--- a/sevices/compliance-audit.html
+++ b/sevices/compliance-audit.html
@@ -144,7 +144,7 @@
 
             <br>
             <p style="text-align: right;">
-              <a href="../news.html">View all Services</a>
+              <a href="../services.html">View all Services</a>
             </p>
 
           </section>
