--- a/sevices/governance.html
+++ b/sevices/governance.html
@@ -146,7 +146,7 @@
 
             <br>
             <p style="text-align: right;">
-              <a href="../news.html">View all Services</a>
+              <a href="../services.html">View all Services</a>
             </p>
 
           </section>
