--- a/sevices/red-blue-purple-team.html
+++ b/sevices/red-blue-purple-team.html
@@ -63,29 +63,24 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Advisory
+              Red, Blue & Purple Team Testing
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Advisory?
+                What is Red, Blue & Purple Team Testing?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Cyber Security Advisory services help you understand and manage your risk. Using the knowledge and
-                expertise of experienced cyber security professionals, you can gain a clearer understanding of your
-                organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
+                Our Red and Blue Team services use real world techniques to exploit weaknesses in your organisations’ processes and technologies as well as protect them by monitoring your corporate networks, conducting internal and external vulnerability scan and implementing controls
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Advisory?
+                Why Five Eyes Red, Blue & Purple Team Testing?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting works with diverse corporate and government establishments to mitigate security
-                risks and provide guidance in cyber security and risk management programs. Backed by a strong alliance
-                of resources and industry professionals, our advisory works to align our clients’ initiatives and goals
-                with pragmatic solutions based on best practices, frameworks and policies (ISM, PSPF, ISO27001, ISO 9001
-                & ISO37000).
+                We conduct testing of your digital, physical and workforce environments with a simulated cyber-intrusion using real-world attack methods and guidance to assess vulnerabilities and how to safeguard against future attacks
               </p>
             </div>
 
