--- a/cyber_security.html
+++ b/cyber_security.html
@@ -316,7 +316,7 @@
                   <p class="categories__grid__label">
                     We assess your architecture, systems and networks for vulnerabilities that may be a threat to your organisation
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/vulnerability-assessment.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -327,7 +327,7 @@
                   <p class="categories__grid__label">
                     We test your digital, physical and workforce environments with a simulated cyber-intrusion using real-world attack methods
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/red-blue-purple-team.html">Learn More</a>
                 </div>
 
               </div>
@@ -343,7 +343,7 @@
                   <p class="categories__grid__label">
                     We deliver Security Operations Centres for your organisation
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/security-operation-centres.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -353,7 +353,7 @@
                   <p class="categories__grid__label">
                     We identify, classify, scan for and report on threats and vulnerabilities impacting your digital assets
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/vulnerability-management.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -365,7 +365,7 @@
                   <p class="categories__grid__label">
                     We provide threat intelligence analysis and reporting enabling informed strategic decision making
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/threat-intelligence.html">Learn More</a>
                 </div>
 
               </div>
@@ -384,7 +384,7 @@
                   <p class="categories__grid__label">
                     We conduct digital forensic investigations and analysis that spans across a broad range of cases
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/digital-forensics.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -396,7 +396,7 @@
                   <p class="categories__grid__label">
                     We thoroughly investigate attacker activities and determine the root cause of compromised networks and systems through our threat hunting and scanning capabilities
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/incident-response.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -408,7 +408,7 @@
                   <p class="categories__grid__label">
                     We help your organisation navigate and resolve issues and maintain a strong and resilient security posture
                   </p>
-                  <a class="categories__grid__button" href="./service.html">Learn More</a>
+                  <a class="categories__grid__button" href="./sevices/crisis-management-response.html">Learn More</a>
                 </div>
 
               </div>
